Add permission-based authorization and update JWT claims